<resources>
    <string name="app_name">miniProyecto1</string>
    <!-- Tus strings existentes -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloInventario">Inventario</string>
    <string name="agregar_producto">Agregar producto</string>

    <!-- Widget específicos -->
    <string name="widget_title_inventory">Inventory</string>
    <string name="inv_logo_desc">Logo Inventory</string>
    <string name="inv_toggle_eye_desc">Mostrar u ocultar saldo</string>
    <string name="inv_manage_icon_desc">Gestionar inventario</string>
    <string name="inv_manage_text">Gestionar inventario</string>
    <string name="inv_question">¿Cuánto tengo de inventario?</string>

    <!-- Strings para ItemEditFragment -->
    <string name="title_edit_producto">Editar produto</string>
    <string name="id_placeholder">Id: --</string>
    <string name="label_id">Id: %d</string>
    <string name="hint_name">Nombre artículo</string>
    <string name="hint_price">Precio</string>
    <string name="hint_quantity">Cantidad</string>
    <string name="action_edit">Editar</string>
</resources>